# GeoFloodPredict

./: .env.example  .gitignore  .pre-commit-config.yaml  PHASE_0_COMPLETED.md  PROJECT_PLAN.md  QUICK_START.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/v1/routes/: __init__.py  health.py
app/core/: config.py  logging.py
app/db/: session.py
app/schemas/: health.py
app/services/features/: __init__.py
app/services/geoprocessing/: __init__.py
app/services/inference/: __init__.py
app/services/ingestion/: __init__.py
app/services/training/: __init__.py
app/workers/: __init__.py  tasks.py
tests/: conftest.py
tests/unit/: test_health.py
