[project]
name = "geofloodpredict"
version = "0.1.0"
description = "ML-based urban flood risk prediction system using geospatial and meteorological data"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

# Runtime dependencies
dependencies = [
    # FastAPI & Web
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic-settings>=2.0.0",
    # Database & ORM
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "geoalchemy2>=0.14.1",
    # Geospatial & Raster
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "rasterio>=1.3.0",
    "rioxarray>=0.15.0",
    # Data & Science
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    # Hyperparameter Tuning & Experiment Tracking
    "optuna>=3.14.0",
    "mlflow>=2.10.0",
    # Utilities
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "asyncpg>=0.31.0",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-redis>=4.6.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "data*", "models*", "notebooks*", "scripts*"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "RUF"]
ignore = ["E501"]  # line-too-long (handled by formatter)

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "rasterio.*",
    "rioxarray.*",
    "geoalchemy2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "types-redis>=4.6.0.20241004",
]
